[workspace]
members = ["schema", "lib", "derive", "macros", "util"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["m00n"]
edition = "2024"
license = "MPL"

[workspace.dependencies]
cofd-schema = { path = "schema" }
cofd-macros = { path = "macros" }
cofd-util = { path = "util" }
cofd-derive = { path = "derive" }

serde = { version = "1", features = ["derive"] }
strum = "0.27"
convert_case = "0.8"

derive_more = { version = "2" }

systema = { path = "../../systema" }

ron = "0.9.0-alpha.0"