[package]
name = "cofd"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
convert_case = "0.6"

derive_more = { version = "1", features = ["from", "try_into", "display"] }
enum_dispatch = "0.3"
strum = { workspace = true, features = ["derive"] }

cofd-schema.workspace = true
cofd-util.workspace = true
cofd-macros.workspace = true

[dev-dependencies]
ron.workspace = true
