[package]
name = "cofd-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
cofd-schema.workspace = true

proc-macro2 = "1"
quote = "1"
syn = "2"

ron.workspace = true

convert_case = "0.6"