[package]
name = "cofd-schema"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"

cofd-util.workspace = true

chrono = { version = "0.4", features = ["serde"] }
strum = { workspace = true, features = ["derive"] }
derive_more = { version = "0.99", default-features = false, features = ["display"] }

itertools = "*"